--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -10,6 +10,26 @@ body {
 	background-color: rgb(255, 255, 255);
 }
 
+table,td,th {
+	border: 1px solid #c0c2ff;
+	vertical-align: middle;
+}
+
+input[type="button"] {
+	padding: 10px 30px 10px 30px;
+	background: #66C1E4;
+	border: none;
+	color: #FFF;
+	box-shadow: 1px 1px 1px #4C6E91;
+	-webkit-box-shadow: 1px 1px 1px #4C6E91;
+	-moz-box-shadow: 1px 1px 1px #4C6E91;
+	text-shadow: 1px 1px 1px #5079A3;
+}
+
+td {
+	padding: 15px;
+}
+
 .blended_grid {
 	display: block;
 	width: 900px;
@@ -20,17 +40,19 @@ body {
 .pageHeader {
 	border-color: black;
 	border-width: thick;
-	padding:3px;
-	background-color: #F2F2F2;
-	text-align:center;
+	margin: 3px;
+	padding: 3px;
+	background-color: #f3f9ff;
+	text-align: center;
 	float: left;
 	clear: none;
 	height: 200px;
 	width: 900px;
+	padding: 3px;
 }
 
 .pageLeftMenu {
-	background-color: #2b2b2b;
+	background-color: #e1ffc0;
 	float: left;
 	clear: none;
 	height: 600px;
@@ -38,21 +60,115 @@ body {
 }
 
 .pageContent {
-	background-color: #CEE3F6;
+	background-color: #C0E1FF;
 	float: left;
 	clear: none;
 	height: 600px;
 	width: 700px;
+	overflow: hidden;
 }
 
 .pageFooter {
-	background-color:#F2F2F2;
+	background-color: #F2F2F2;
 	float: left;
 	clear: none;
 	height: 100px;
 	width: 900px;
 }
-.itemCreationForm{
+
+.itemCreationForm {
 	vertical-align: center;
 	text-align: center;
-	}
+}
+
+/* Elegant Aero */
+.elegant-aero {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 500px;
+	background: #D2E9FF;
+	padding: 20px 20px 20px 20px;
+	font: 12px Arial, Helvetica, sans-serif;
+	color: #666;
+}
+
+.elegant-aero h1 {
+	font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
+	padding: 10px 10px 10px 20px;
+	display: block;
+	background: #C0E1FF;
+	border-bottom: 1px solid #B8DDFF;
+	margin: -20px -20px 15px;
+}
+
+.elegant-aero h1>span {
+	display: block;
+	font-size: 11px;
+}
+
+.elegant-aero label>span {
+	float: left;
+	margin-top: 10px;
+	color: #5E5E5E;
+}
+
+.elegant-aero label {
+	display: block;
+	margin: 0px 0px 5px;
+}
+
+.elegant-aero label>span {
+	float: left;
+	width: 20%;
+	text-align: right;
+	padding-right: 15px;
+	margin-top: 10px;
+	font-weight: bold;
+}
+
+.elegant-aero input[type="text"] {
+	color: #888;
+	width: 70%;
+	padding: 0px 0px 0px 5px;
+	border: 1px solid #C5E2FF;
+	background: #FBFBFB;
+	outline: 0;
+	-webkit-box-shadow: inset 0px 1px 6px #ECF3F5;
+	box-shadow: inset 0px 1px 6px #ECF3F5;
+	font: 200 12px/25px Arial, Helvetica, sans-serif;
+	height: 30px;
+	line-height: 15px;
+	margin: 2px 6px 16px 0px;
+}
+
+.elegant-aero textarea {
+	height: 100px;
+	padding: 5px 0px 0px 5px;
+	width: 70%;
+}
+
+.elegant-aero select {
+	background: #fbfbfb url('down-arrow.png') no-repeat right;
+	background: #fbfbfb url('down-arrow.png') no-repeat right;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	text-indent: 0.01px;
+	text-overflow: '';
+	width: 70%;
+}
+
+.elegant-aero .button {
+	padding: 10px 30px 10px 30px;
+	background: #66C1E4;
+	border: none;
+	color: #FFF;
+	box-shadow: 1px 1px 1px #4C6E91;
+	-webkit-box-shadow: 1px 1px 1px #4C6E91;
+	-moz-box-shadow: 1px 1px 1px #4C6E91;
+	text-shadow: 1px 1px 1px #5079A3;
+}
+
+.elegant-aero .button:hover {
+	background: #3EB1DD;
+}
