renaming js files
configure scale page

--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -141,6 +141,21 @@ td {
 	margin: 2px 6px 16px 0px;
 }
 
+.elegant-aero input[type="number"] {
+	color: #888;
+	width: 70%;
+	padding: 0px 0px 0px 5px;
+	border: 1px solid #C5E2FF;
+	background: #FBFBFB;
+	outline: 0;
+	-webkit-box-shadow: inset 0px 1px 6px #ECF3F5;
+	box-shadow: inset 0px 1px 6px #ECF3F5;
+	font: 200 12px/25px Arial, Helvetica, sans-serif;
+	height: 30px;
+	line-height: 15px;
+	margin: 2px 6px 16px 0px;
+}
+
 .elegant-aero textarea {
 	height: 100px;
 	padding: 5px 0px 0px 5px;
