--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -160,6 +160,16 @@ td {
 	width: 600px;
 	vertical-align: middle;
 }
+.sessionDetailsContainer
+{
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 500px;
+	background-color:#fbfbfb;
+	margin-top:10px;
+	color: #5E5E5E;
+	
+}
 
 table.items_table {
 	text-align: inherit;
