session buttons fix

--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -109,9 +109,12 @@ td {
 
 .sessionInfo {
 	float: left;
-	
 	vertical-align: middle;
 	margin-bottom: 50px;
+}
+
+.sessionButton {
+	margin-bottom: 10px;
 }
 
 .listDataView {
