--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -157,21 +157,21 @@ td {
 }
 
 .test_graphpage {
-	margin-top: 20px; vertical-align : middle;
+	margin-top: 20px;
+	vertical-align: middle;
 	text-align: center;
 	float: right;
 	width: 600px;
 	vertical-align: middle;
 }
-.sessionDetailsContainer
-{
+
+.sessionDetailsContainer {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 500px;
-	background-color:#fbfbfb;
-	margin-top:10px;
+	background-color: #fbfbfb;
+	margin-top: 10px;
 	color: #5E5E5E;
-	
 }
 
 table.items_table {
