--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -152,6 +152,24 @@ td {
 	border-radius: 20px;
 }
 
+.mail{
+	border: 1px solid #DADADA;
+	color: #888;
+	height: 30px;
+	margin-bottom: 16px;
+	margin-right: 6px;
+	margin-top: 2px;
+	outline: 0 none;
+	padding: 3px 3px 3px 5px;
+	width: 70%;
+	font-size: 12px;
+	line-height: 15px;
+	box-shadow: inset 0px 1px 4px #ECECEC;
+	-moz-box-shadow: inset 0px 1px 4px #ECECEC;
+	-webkit-box-shadow: inset 0px 1px 4px #ECECEC;
+	
+}
+
 .pageLeftMenu_graphpage {
 	background-color: white /* #e1ffc0*/;
 	float: left;
@@ -278,7 +296,7 @@ table.itemsToRate {
 	color: #888;
 }
 
-.basic-grey input[type="text"],.basic-grey input[type="email"],.basic-grey input[type="number"],.basic-grey textarea,.basic-grey select
+.basic-grey input[type="text"],.basic-grey input[type="email"],.basic-grey input[type="number"],.basic-grey input[type="password"],.basic-grey textarea,.basic-grey select
 	{
 	border: 1px solid #DADADA;
 	color: #888;
