updating buttons and functions, added logout function and buttons to every page. Also, edited each page based on needed buttons

--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -227,6 +227,7 @@ table.items_table {
 	text-align: inherit;
 	margin-left: auto;
 	margin-right: auto;
+	overflow: scroll;
 }
 
 table.itemsToRate {
