--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -81,9 +81,9 @@ td {
 	display: block;
 	width: 900px;
 	height: 100%;
-	overflow: hidden;
+	
 	margin: 30px auto 0 auto;
-	overflow: hidden;
+	overflow: visible;
 }
 
 .pageHeader {
@@ -146,9 +146,9 @@ td {
 	background-color: white;
 	position: relative;
 	clear: none;
-	height: 100%;
+	height: auto;
 	width: 900px;
-	overflow: hidden;
+	
 	border-radius: 20px;
 }
 
@@ -227,7 +227,9 @@ table.items_table {
 	text-align: inherit;
 	margin-left: auto;
 	margin-right: auto;
-	overflow: scroll;
+	margin-top:auto;
+	margin-bottom:auto;
+	overflow: auto;
 }
 
 table.itemsToRate {
